# bcat

./: requirements.txt  setup.cfg
src/: cli.py
src/fs/: bfile.py  compression.py  file.py  parquet_file.py  pickle_file.py
