[metadata]
name = bcat
version = 0.0.2

[options.packages.find] # (always `find` even if `find_namespaces:` was used before)
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=src*
exclude=src.tests*

install_requires =
  pyarrow
  pandas

[options.entry_points]
console_scripts =
    bcat = cli:main
